--- a/my app/app/src/main/res/layout/activity_faq.xml
+++ b/my app/app/src/main/res/layout/activity_faq.xml
@@ -174,6 +174,79 @@
             android:textColor="#808080"
             />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FOR WALLET :"
+            android:paddingLeft="8dp"
+            android:paddingBottom="5dp"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:textColor="#b34d4d"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1.  How do I add money to my wallet?"
+            android:paddingLeft="8dp"
+            android:paddingBottom="5dp"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-   By pressing the floating button at the bottom you can add money in your wallet.."
+            android:paddingLeft="30dp"
+            android:layout_margin="5dp"
+            android:textSize="14sp"
+            android:textStyle="italic"
+            android:textColor="#808080"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2.  Do I need to maintain a minimum balance in my wallet?"
+            android:paddingLeft="8dp"
+            android:paddingBottom="5dp"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-  Yes you need to maintain at most Rs.2000/- in your wallet."
+            android:paddingLeft="30dp"
+            android:layout_margin="5dp"
+            android:textSize="14sp"
+            android:textStyle="italic"
+            android:textColor="#808080"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3.  How can I check my wallet balance?"
+            android:paddingLeft="8dp"
+            android:paddingBottom="5dp"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-  You can check your balance in your user account by clicking on 'My Wallet'."
+            android:paddingLeft="30dp"
+            android:layout_margin="5dp"
+            android:textSize="14sp"
+            android:textStyle="italic"
+            android:textColor="#808080"
+            />
+
 
     </LinearLayout>
 </ScrollView>
