--- a/my app/app/src/main/res/layout/activity_my_account_wishlist.xml
+++ b/my app/app/src/main/res/layout/activity_my_account_wishlist.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".myAccount_wishlist">
+    tools:context=".myAccount_wishlist"
+    >
 
     <ListView
         android:id="@+id/list_myaccount"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
