--- a/my app/app/src/main/res/layout/activity_village_home.xml
+++ b/my app/app/src/main/res/layout/activity_village_home.xml
@@ -207,5 +207,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageButton
+            android:id="@+id/star"
+            android:layout_width="49dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="12dp"
+            android:background="#00ffffff"
+            app:layout_constraintEnd_toStartOf="@+id/ButtonPackage"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_star_black_24dp" />
+
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
